# Cryptnox-Gallery

./: Cryptnox Gallery.spec  Manifest.in  Pipfile  README.md  cryptnox_gallery.nsi  cryptnox_gallery.spec  cryptnox_gallery_mac_os.spec  setup.cfg
cryptnox_gallery/: NFT_wrong.txt  arc_gauge.py  main.py  testme.py
