[metadata]
name = cryptnox-gallery
version = attr: cryptnox_gallery.__version__
keywords =
    python
    cryptography
    ethereum
author = Cryptnox SA
author_email = info@cryptnox.ch
home_page = https://www.cryptnox.com/
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6,<=3.10
packages = find:
packages_dir = cryptnox-gallery
zip_safe = False
include_package_data = True
install_requires =
    cryptnoxpy
    wxpython
    pillow
    requests

[options.entry_points]
console_scripts =
    cryptnox-gallery = cryptnox_gallery.main:main

[options.packages.find]
exclude =
    tests
